--- a/index.css
+++ b/index.css
@@ -3,12 +3,14 @@
 @tailwind utilities;
 
 .bg-grid-pattern {
-  background-image:
-    linear-gradient(rgba(255, 255, 255, 0.07) 1px, transparent 1px),
+  background-image: linear-gradient(
+      rgba(255, 255, 255, 0.07) 1px,
+      transparent 1px
+    ),
     linear-gradient(to right, rgba(255, 255, 255, 0.07) 1px, transparent 1px);
   background-size: 2rem 2rem;
 }
 
 .text-shadow-lg {
-  text-shadow: 2px 2px 4px rgba(0,0,0,0.4);
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
